--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{
 main img{
     width: 150px;
     height: auto;
-    border: 1px soild steelblue;
+    border: 1px solid steelblue;
     padding: 2px;
     border-radius: 10px;
     box-shadow: 0 0 30px gray;
