updated some files and added a new folder

--- a/week-02/styles/box-model.css
+++ b/week-02/styles/box-model.css
@@ -1,6 +1,5 @@
 .callout {
 	max-width: 800px;
-    margin: ;
     color: white;
     background-color: steelblue;
 }
@@ -17,5 +16,5 @@ blockquote {
 }
 
 cite {
-	
+	margin: 1;
 }
