--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,15 +1,47 @@
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 :root{
     --primary-color: #005d66;
     --secondary-color: #83c5d9;
     --accent-1:#D3c284;
     --accent-2: #171717;
     --accent-3: #18538A;
-
+    --pfont: 
+}
+nav a{
+    text-decoration: none;
+    color: var(--primary-color);
+    font-family: titillium web, Arial, Helvetica, sans-serif;
 }
 
 body{
     background-color: var(--accent-1);
 }
+.hero{
+    position: relative;
+}
+.hero img{
+    display: block;
+    width: 100%;
+    height: auto;
+    position: absolute;
+}
+.hero article{
+    position: absolute;
+    background-color: #d3c2846c;
+    font-family:roboto 300, monospace;
+    max-width: 1000px;
+    margin-top: 200px;
+}
+.hero article img{
+    width: 25%;
+    float: right;
+    position: relative;
+    
+}
 h1{
+    position: absolute;
     color: var(--primary-color);
+
 }
