--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -9,39 +9,146 @@
     --accent-3: #18538A;
     --pfont: 
 }
+header{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+}
+nav{
+    grid-column: 3/4;
+    display: flex;
+    gap: 30px;
+}
+nav a:hover{
+    transition: ease .1s;
+    border-bottom: 3px solid var(--accent-2);
+}
+.logo-img{
+    width: 140px;
+    height: auto;
+}
 nav a{
     text-decoration: none;
     color: var(--primary-color);
     font-family: titillium web, Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 600;
 }
-
+.container {
+    display: grid;
+    grid-template-columns: repeat(autofill, minmax(150px, 1fr));
+    gap: 10px;
+  }
 body{
-    background-color: var(--accent-1);
+  
 }
 .hero{
     position: relative;
+    display: flex;           /* Use flexbox */
+    flex-direction: column;  /* Stack items vertically */
+    align-items: center;     /* Center items horizontally */
+    justify-content: flex-start; 
+    text-align: center;      /* Center text */
+
 }
 .hero img{
     display: block;
     width: 100%;
     height: auto;
-    position: absolute;
+  
+}
+.hero h1{
+    font-size: 40px;
 }
 .hero article{
     position: absolute;
-    background-color: #d3c2846c;
+    background-color: #ebebebab;
+    color: #242424;
     font-family:roboto 300, monospace;
-    max-width: 1000px;
+    max-width: 1300px;
+    margin: 10px;
     margin-top: 200px;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 18px;
+  
 }
 .hero article img{
-    width: 25%;
+    width: 200px;
     float: right;
     position: relative;
+    border-radius: 10px;
     
 }
 h1{
     position: absolute;
-    color: var(--primary-color);
+    color: #e5ecee;
 
+}
+.section-history{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.history-1{
+    display: flex;
+    align-items: center;
+}
+
+.section-adven{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: space-around;
+
+}
+.history-2{
+    display: flex;
+    align-items: center;
+}
+.section-adven img{
+    height: 150px;
+    width: auto;
+    padding: ;
+    margin: ;
+}
+.img-container{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 0px;
+    align-items: ;
+    justify-content: space-around;
+}
+figure{
+    padding: 0;
+    text-align: center;
+    background-color: #18538a88;
+}
+
+/* footer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 50px;
+    gap: 100px;
+    padding: 10px;
+} */
+footer{
+    display: grid;
+    grid-template-columns: 4(1fr);
+}
+footer p{
+    grid-column: 2/4;
+    text-align: center;
+    font-size: 18px;
+
+}
+footer nav{
+    align-self: center;
+    justify-content: center;
+    grid-column: 4/5;
+}
+footer img{
+    width: 35px;
 }
