--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -36,7 +36,7 @@ nav a{
 }
 .container {
     display: grid;
-    grid-template-columns: repeat(autofill, minmax(150px, 1fr));
+    grid-template-columns: repeat( minmax(150px, 1fr));
     gap: 10px;
   }
 body{
@@ -46,16 +46,16 @@ body{
     position: relative;
     display: flex;           /* Use flexbox */
     flex-direction: column;  /* Stack items vertically */
-    align-items: center;     /* Center items horizontally */
+    align-items: center;    
     justify-content: flex-start; 
-    text-align: center;      /* Center text */
-
+    text-align: center;
+    border-radius: 15px;      
 }
 .hero img{
     display: block;
     width: 100%;
     height: auto;
-  
+    border-radius: 15px;
 }
 .hero h1{
     font-size: 40px;
@@ -64,28 +64,29 @@ body{
     position: absolute;
     background-color: #ebebebab;
     color: #242424;
-    font-family:roboto 300, monospace;
+    font-family:roboto, monospace;
     max-width: 1300px;
     margin: 10px;
     margin-top: 200px;
     padding: 20px;
     border-radius: 10px;
-    font-size: 18px;
-  
+    font-size: 18px; 
 }
 .hero article img{
     width: 200px;
     float: right;
     position: relative;
-    border-radius: 10px;
-    
+    border-radius: 10px; 
 }
 h1{
     position: absolute;
     color: #e5ecee;
-
 }
 .section-history{
+    background-color: #ececec93;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px darkgray;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -93,8 +94,10 @@ h1{
 .history-1{
     display: flex;
     align-items: center;
+    font-size: 18px;
+    padding: 15px;
+    font-family: roboto, monospace;
 }
-
 .section-adven{
     display: flex;
     flex-direction: column;
@@ -106,25 +109,28 @@ h1{
 .history-2{
     display: flex;
     align-items: center;
+    font-size: 18px;
+    padding: 15px;
 }
 .section-adven img{
     height: 150px;
     width: auto;
-    padding: ;
-    margin: ;
+}
+h2{
+    font-size: 30px;
 }
 .img-container{
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 0px;
-    align-items: ;
     justify-content: space-around;
 }
 figure{
     padding: 0;
     text-align: center;
-    background-color: #18538a88;
+    background-color: #6ba8e0ab;
 }
+
 
 /* footer{
     display: flex;
@@ -142,7 +148,6 @@ footer p{
     grid-column: 2/4;
     text-align: center;
     font-size: 18px;
-
 }
 footer nav{
     align-self: center;
