--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -128,9 +128,111 @@ h2{
 figure{
     padding: 0;
     text-align: center;
-    background-color: #6ba8e0ab;
+    background-color: #ffffff00;
+    
+}
+figure img{
+    border-radius: 10px;
+}
+figcaption{
+    background-color: #fff;
+    text-wrap:wrap;
+}
+.contact_container{
+    display: grid;
+    grid-template-columns: 4(1fr);
+    grid-template-rows: 5(1fr);
+    gap: 20px;
+}
+.contact_container div{
+    background-color: rgb(252, 252, 252);
+    box-shadow: 0px 0px 5px rgba(145, 145, 145, 0.774);
+    border-radius: 10px;
+}
+.map-box{
+    height: auto;
+    grid-column: 1/5;
+    grid-row: 1/4;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    
+}
+.map-box iframe, .map-box article{
+    flex: 2 1 200px; /* Grow, shrink, and start with 200px width */
+    min-width: 150px; /* Minimum width to maintain before wrapping */
+    padding: 20px;
+    border-left: 2px solid #333;
 }
 
+.box-1{
+    width: 100%;
+    height: auto;
+    grid-column: 1/3;
+    grid-row: 4/6;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.box-2{
+    width: 100%;
+    height: auto;
+    grid-column: 3/5;
+    grid-row: 4/6;
+}
+.contact-form{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+}
+#username, #email{
+    height: 40px;
+    border-radius: 40px;
+    border: none;
+    outline: none;
+    box-shadow: 0px 0px 2px #000;
+}
+#check{
+    width: 20px;
+    height: 20px;
+
+}
+#textarea{
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 13px;
+}
+#submit{
+    margin-top: 40px;
+    width: 200px;
+    height: 40px;
+    border-radius: 40px;
+    background-color: #ACC8E5;
+    font-size: 18px;
+    font-weight: 500;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0px 0px 10px #00000081;
+}
+#submit:hover{
+    box-shadow: none;
+}
+.fieldset1{
+    display: grid;
+    gap: 10px;
+    border: none;
+}
+.fieldset2{
+    border: none;
+}
+.fieldset3{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: none;
+}
 
 /* footer{
     display: flex;
@@ -141,6 +243,8 @@ figure{
     padding: 10px;
 } */
 footer{
+    margin-top: 200px;
+    position: relative;
     display: grid;
     grid-template-columns: 4(1fr);
 }
